# toHTML

./: .gitignore  Cargo.toml  DEPENDENCIES.md  README.md  ROADMAP.md  compare_render.py  render_pdfs.py  rqlens.toml
plans/: CODE_REVIEW.html  CODE_REVIEW_IMPLEMENTATION_PLAN.md  GOAL.md  LLM_IMPROVEMENT_LOG.md  LLM_IMPROVEMENT_LOOP.md  OUTPUT_ALIGNMENT_PLAN.html  PDF_FONT_TEXT_DECODING_IMPLEMENTATION_PLAN.html  PDF_FONT_TEXT_DECODING_IMPLEMENTATION_PLAN.md  PDF_READABLE_HTML_SPEC.html  PDF_TEXT_DECODING_ROADMAP.md  STAGE_2_QUALITY.md  STAGE_3_QUALITY.md  STAGE_4_QUALITY.md  STAGE_5_QUALITY.md  STAGE_6_QUALITY.md  STAGE_7_QUALITY.md  STAGE_8_QUALITY.md  STAGE_9_PDF_SEMANTICS.md
side-projects/html-editor/: Cargo.toml
side-projects/html-editor/src/: commands.rs  doc.rs  files.rs  lib.rs  main.rs  palette.rs  paths.rs  serialize.rs  settings.rs
side-projects/html-editor/src/commands/: catalog.rs  keys.rs  prompts.rs
side-projects/html-editor/src/doc/: editing.rs  runs.rs  table.rs
side-projects/html-editor/src/serialize/: parser.rs
side-projects/pdf-web-compare/: .gitignore  README.md  index.html  package-lock.json  package.json  pdf_web_compare_app.py  pdf_web_compare_common.py  pdf_web_compare_visual.py  requirements.txt  test_pdf_web_compare_app.py  vite.config.ts
side-projects/rich_text/: README.md  editor_preview.rs  mod.rs  render.rs
src/: cli.rs  error.rs  html.rs  lib.rs  main.rs  model.rs
src/cli/: assets.rs  interactive.rs
src/docx/: mod.rs  package.rs  relationships.rs  xml.rs
src/html/: attrs.rs  blocks.rs  (+3 more)
tests/: conversion_fixtures.rs
(+165 files in other folders)
