[package]
name = "html-editor"
version = "0.1.0"
edition = "2021"
description = "Command-palette-driven WYSIWYG HTML editor in egui"

[dependencies]
eframe = "0.34"
egui-phosphor = "0.12"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
